<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_greeting"
        android:text="@string/lbl_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="clickLogin" />
    <Button
        android:id="@+id/btn_about"
        android:text="@string/btn_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="clickAbout" />
</LinearLayout>